go: test only when gofile changed

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,8 +5,12 @@ name: Go
 
 on:
   push:
+    paths:
+      - "**.go"
     branches: [ "master" ]
   pull_request:
+    paths:
+      - "**.go"
     branches: [ "master" ]
 
 jobs:
