--- a/.github/workflows/cron-go.yml
+++ b/.github/workflows/cron-go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.19
 
     - name: Generate
-      run: go main -v ./...
+      run: go run -v ./...
 
     - name: Commit and push
       run: |
