--- a/.github/workflows/cron-go.yml
+++ b/.github/workflows/cron-go.yml
@@ -27,11 +27,12 @@ jobs:
     - name: Commit and push
       env:
         TOKEN: ${{ secrets.PAT }}
+        EMAIL: ${{ secrets.EMAIL }}
       run: |
-        git config --global user.name "bingsoo420"
-        git config --global user.email "gearmoss+bingsoo@gmail.com"
+        git config --global user.name "$GITHUB_REPOSITORY_OWNER"
+        git config --global user.email "$EMAIL"
 
-        git remote set-url --push origin https://bingsoo420:$TOKEN@github.com/bingsoo420/4ch-general
+        git remote set-url --push origin https://$GITHUB_REPOSITORY_OWNER:$TOKEN@github.com/$GITHUB_REPOSITORY
 
         git add -A
         git commit -m "[CRON] mappings.json updated"
